# Solar-Application-Builder-Buddy-Production

./: CONTRIBUTING.md  DEPLOYMENT.md  README.md  docker-compose.yml  e2b.Dockerfile  railway.Dockerfile
.github/workflows/: deploy.yml
app/: index.html  package.json  tailwind.config.js  vite.config.ts
app/src/: SystemErrorBoundary.tsx  vite-env.d.ts
app/src/components/: Router.tsx  types.ts
app/src/components/layout/: AppLayout.tsx
app/src/components/pages/: Dashboard.tsx
services/: main.py  pyproject.toml
